tests/ui/consts/match_ice.stderr
error: constant of non-structural type `S` in a pattern
  --> $DIR/match_ice.rs:11:9
   |
LL | struct S;
   | -------- `S` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const C: &S = &S;
   |     ----------- constant defined here
LL |     match C {
LL |         C => {}
   |         ^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: add a condition to the match arm checking for equality
   |
LL -         C => {}
LL +         binding if binding == C => {}
   |

error: aborting due to 1 previous error

